# SyncoPaid

./: .gitignore  .gitmodules  2025-12-14-seo-audit-results.md  CLAUDE.md  GITHUB_SETUP.md  QUICKSTART.md  README.md  Synco  SyncoPaid.spec  TimeLawg.spec  TimeLogger.spec  USER_MANUAL_GENERATOR_SKILL.md  XStory-Context.md  Xstory  Xtory  activate_stories.py  apply_transitions.py  build.bat  build.sh  code-sentinel.skill  convert_icon.py  create_shortcut.py  diagnose_screenshots.py  explore-stories  generate_version.py  handover-002-story-tree-permission-issue.md  init-git.bat  init-git.sh  launch_lawtime.bat  launch_syncopaid.bat  pyproject.toml  render_svg.py  requirements.txt  test_context_extraction.py  test_idle.py  test_migration.py  test_screenshot_direct.py  test_tray.py  test_window.py  unblock_stories.py  (+1 more)
.claude/: settings.local.json
StoryTree/: setup.py
ai_docs/: LawTime_Setup_Guide.md  LawTime_Tracker_PRD.md  execute-stories-workflow.json  feature-concepts.md  story-tree-skill-overview.md  story-tree-workflow-diagrams.md  technical-reference.md  user-anti-vision.md  workflow-command-integration.md
deprecated/: 006_matter-client-database.md  2025-12-20-__main__.py  2025-12-20-database.py  2025-12-20-exporter.py  2025-12-20-tracker.py  2025-12-21-__main__.py  2025-12-21-database_operations.py  2025-12-21-main_ui_windows.py  2025-12-21-screenshot.py  2025-12-21-tracker_loop.py  2025-12-22-database_operations_events.py  2025-12-22-exporter.py  2025-12-22-main_app_class.py  2025-12-22-main_ui_windows.py  2025-12-22-tracker_windows.py  (+4 more)
lawtime/: __init__.py  (+9 more)
(+867 files in other folders)
